--- a/src/App.css
+++ b/src/App.css
@@ -15,8 +15,9 @@
   border: 1px solid #e3e3e3; 
   border-radius: 5px; 
   border: 1px solid #ccc; 
-  display: inline-block;
-  padding: 6px 12px;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 6px;
   cursor: pointer;
 }
 
